--- a/web-server/docker-compose.yml
+++ b/web-server/docker-compose.yml
@@ -6,5 +6,6 @@ services:
     volumes:
       - ./conf.nginx:/etc/nginx/conf.d/default.conf
       - ./html/:/www/html/
+      - ./images/:/www/images/
     ports:
       - 3000:80
