--- a/layer-7-load-balancing/docker-compose.yml
+++ b/layer-7-load-balancing/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   nginx:
     image: nginx:1.23.3-alpine
     volumes:
-      - ./default.nginx:/etc/nginx/conf.d/default.conf
+      - ./default.nginx:/etc/nginx/nginx.conf
     ports:
       - 3000:80
 
