--- a/multiple-nginx-load-balancing/docker-compose.yml
+++ b/multiple-nginx-load-balancing/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   nginx_one:
     image: nginx:1.23.3-alpine
     volumes:
-      - ./one.nginx:/etc/nginx/conf.d/default.conf
+      - ./default.one.nginx:/etc/nginx/nginx.conf
     ports:
       - 3000:80
   nginx_two:
     image: nginx:1.23.3-alpine
     volumes:
-      - ./two.nginx:/etc/nginx/conf.d/default.conf
+      - ./default.two.nginx:/etc/nginx/nginx.conf
     ports:
       - 3001:80
 
